@@ -1,5 +1,8 @@
 2007-09-03  Marcus Brinkmann  <marcus@g10code.de>
 
+	* assuan.h [_ASSUAN_EXT_SYM_PREFIX]: Add missing symbol renames
+	with _ASSUAN_PREFIX.
+
 	* assuan.h (assuan_inquire_ext): Move buffer and buffer_length
 	arguments callback in prototype.
 	* assuan-defs.h (struct assuan_context_s): Remove members
